full complete co-operate website template using scss

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
                 </div>
                 <ol class="navbar navbar-top"></ol>
                 <div class="btn-group">
-                    <a href="#" class="btn btn-yellow">GET STARTED</a>
+                    <a href="#" class="btn btn-green">Join</a>
                 </div>
                 <i class="fa fa-bars btn-menu"></i>
             </nav>
