--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,8 @@
                 </div>
                 <ol class="navbar navbar-top"></ol>
                 <div class="btn-group">
-                    <a href="#" class="btn btn-yellow">GET STARTED</a>
+                    <a role="button" class="btn btn-blue" href="tel:+256756150066"><i class="fa fa-phone"></i> Call</a>
+                    <a role="button" class="btn btn-green" href="mailto:confusion@info.com"><i class="fa fa-envelope"></i> Email</a>
                 </div>
                 <i class="fa fa-bars btn-menu"></i>
             </nav>
@@ -61,6 +62,34 @@
                 </ol>
             </div>
         </div>
+        <section>
+            <div class="container">
+                <h4 class="section-title">Send Us Feedback</h4>
+                <div class="row">
+                    <div class="form-container">
+                        <form action="#">
+                            <div class="input-cnt">
+                                <i class="fa fa-user"></i>
+                                <input type="text" placeholder="Name" name="name" />
+                             </div>
+                             <div class="input-cnt">
+                                <i class="fa fa-envelope"></i>
+                                <input type="text" placeholder="Email" name="email" />
+                             </div>
+                             
+                             <div class="input-cnt">
+                                <i class="fa fa-envelope textarea-icon"></i>
+                                <textarea  placeholder="Your message here..." name="message"></textarea>
+                             </div>
+                             
+                             <div class="input-cnt">
+                                <input type="submit" />
+                             </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section>
             <div class="container">
                 <h4 class="section-title">Our location information</h4>
