--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
                 <ol class="navbar navbar-top"></ol>
                 <div class="btn-group">
-                    <a href="#" class="btn btn-yellow">GET STARTED</a>
+                    <a href="#" class="btn btn-red"><i class="fa fa-bell"></i> Subscribe</a>
                 </div>
                 <i class="fa fa-bars btn-menu"></i>
             </nav>
@@ -55,10 +55,10 @@
         <section class="hero">
             <div class="container">
                 <h1 class="title">Hultech</h1>
-                <p>Hultech is a news website that provide with all the lastest technology and science news,research and innovations from the all universe.</p>
+                <p>We are an online news media that provide with all the lastest technology and science news,research and innovations from the all universe.</p>
                 <div class="btn-group">
-                    <a href="#" class="btn btn-yellow">GET STARTED</a>
-                    <a href="#" class="btn btn-red">Subcribe</a>
+                    <a href="#" class="btn btn-yellow">About us</a>
+                    <a href="#" class="btn btn-red"><i class="fa fa-bell"></i> Subscribe</a>
                 </div>
             </div>
         </section>
@@ -69,10 +69,10 @@
                     <div class="col-md-12 col-lg-4">
                         <div class="card">
                             <div class="card__header">
-                              <img src="./assests/images/logo.png" alt="card__image" class="card__image" width="600">
+                              <img src="./assests/images/meta.jpg" alt="card__image" class="card__image" width="600">
                             </div>
                             <div class="card__body">
-                              <h4>What's new in 2022 Tech</h4>
+                              <h4>Facebook changes it's brandname</h4>
                               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi perferendis molestiae non nemo doloribus. Doloremque, nihil! At ea atque quidem!</p>
                             </div>
                             <div class="card__footer">
@@ -85,10 +85,10 @@
                     <div class="col-md-12 col-lg-4">
                         <div class="card">
                             <div class="card__header">
-                              <img src="./assests/images/logo.png" alt="card__image" class="card__image" width="600">
+                              <img src="https://images.pexels.com/photos/1779487/pexels-photo-1779487.jpeg?cs=srgb&dl=pexels-designecologist-1779487.jpg&fm=jpg" alt="card__image" class="card__image" width="600">
                             </div>
                             <div class="card__body">
-                              <h4>What's new in 2022 Tech</h4>
+                              <h4>What's a smart home ?</h4>
                               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi perferendis molestiae non nemo doloribus. Doloremque, nihil! At ea atque quidem!</p>
                             </div>
                             <div class="card__footer">
@@ -101,10 +101,10 @@
                     <div class="col-md-12 col-lg-4">
                         <div class="card">
                             <div class="card__header">
-                              <img src="./assests/images/logo.png" alt="card__image" class="card__image" width="600">
+                              <img src="https://images.pexels.com/photos/2156/sky-earth-space-working.jpg?cs=srgb&dl=pexels-pixabay-2156.jpg&fm=jpg" alt="card__image" class="card__image" width="600">
                             </div>
                             <div class="card__body">
-                              <h4>What's new in 2022 Tech</h4>
+                              <h4>Moon Mission 2022</h4>
                               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi perferendis molestiae non nemo doloribus. Doloremque, nihil! At ea atque quidem!</p>
                             </div>
                             <div class="card__footer">
@@ -124,10 +124,10 @@
                     <div class="col-md-12 col-lg-4">
                         <div class="card">
                             <div class="card__header">
-                              <img src="./assests/images/logo.png" alt="card__image" class="card__image" width="600">
+                              <img src="./assests/images/windows-4jObbWz5vfI-unsplash.jpg" alt="card__image" class="card__image" width="600">
                             </div>
                             <div class="card__body">
-                              <h4>What's new in 2022 Tech</h4>
+                              <h4>Windows 11 reviews</h4>
                               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi perferendis molestiae non nemo doloribus. Doloremque, nihil! At ea atque quidem!</p>
                             </div>
                             <div class="card__footer">
@@ -140,10 +140,10 @@
                     <div class="col-md-12 col-lg-4">
                         <div class="card">
                             <div class="card__header">
-                              <img src="./assests/images/logo.png" alt="card__image" class="card__image" width="600">
+                              <img src="./assests/images/damon-lam-Gs2g7qJstYg-unsplash.jpg" alt="card__image" class="card__image" width="600">
                             </div>
                             <div class="card__body">
-                              <h4>What's new in 2022 Tech</h4>
+                              <h4>Ice Rocks on Mars</h4>
                               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi perferendis molestiae non nemo doloribus. Doloremque, nihil! At ea atque quidem!</p>
                             </div>
                             <div class="card__footer">
@@ -156,65 +156,10 @@
                     <div class="col-md-12 col-lg-4">
                         <div class="card">
                             <div class="card__header">
-                              <img src="./assests/images/logo.png" alt="card__image" class="card__image" width="600">
+                              <img src="https://images.pexels.com/photos/4144923/pexels-photo-4144923.jpeg?cs=srgb&dl=pexels-julia-m-cameron-4144923.jpg&fm=jpg" alt="card__image" class="card__image" width="600">
                             </div>
                             <div class="card__body">
-                              <h4>What's new in 2022 Tech</h4>
-                              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi perferendis molestiae non nemo doloribus. Doloremque, nihil! At ea atque quidem!</p>
-                            </div>
-                            <div class="card__footer">
-                                <h5>Jane Doe</h5>
-                                <small>2h ago</small>
-                                <span class="tag tag-blue">Technology</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="top-stories">
-            <div class="container">
-                <h4 class="section-title">virals</h4>
-                <div class="row">
-                    <div class="col-md-12 col-lg-4">
-                        <div class="card">
-                            <div class="card__header">
-                              <img src="./assests/images/logo.png" alt="card__image" class="card__image" width="600">
-                            </div>
-                            <div class="card__body">
-                              <h4>What's new in 2022 Tech</h4>
-                              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi perferendis molestiae non nemo doloribus. Doloremque, nihil! At ea atque quidem!</p>
-                            </div>
-                            <div class="card__footer">
-                                <h5>Jane Doe</h5>
-                                <small>2h ago</small>
-                                <span class="tag tag-blue">Technology</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-12 col-lg-4">
-                        <div class="card">
-                            <div class="card__header">
-                              <img src="./assests/images/logo.png" alt="card__image" class="card__image" width="600">
-                            </div>
-                            <div class="card__body">
-                              <h4>What's new in 2022 Tech</h4>
-                              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi perferendis molestiae non nemo doloribus. Doloremque, nihil! At ea atque quidem!</p>
-                            </div>
-                            <div class="card__footer">
-                                <h5>Jane Doe</h5>
-                                <small>2h ago</small>
-                                <span class="tag tag-blue">Technology</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-12 col-lg-4">
-                        <div class="card">
-                            <div class="card__header">
-                              <img src="./assests/images/logo.png" alt="card__image" class="card__image" width="600">
-                            </div>
-                            <div class="card__body">
-                              <h4>What's new in 2022 Tech</h4>
+                              <h4>Best online education</h4>
                               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi perferendis molestiae non nemo doloribus. Doloremque, nihil! At ea atque quidem!</p>
                             </div>
                             <div class="card__footer">
@@ -281,6 +226,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js" integrity="sha512-RNLkV3d+aLtfcpEyFG8jRbnWHxUqVZozacROI4J2F1sTaDqo1dPQYs01OMi1t1w9Y2FdbSCDSQ2ZVdAC8bzgAg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./node_modules/jquery/dist/jquery.js"></script>
     <script src="./node_modules/handlebars/dist/handlebars.js"></script>
-    <script src="./assests/js/scripts.js"></script>
+    <script src="./assests/js/index.js"></script>
 </body>
 </html>
