--- a/contact.html
+++ b/contact.html
@@ -177,6 +177,6 @@
     <script src="./node_modules/jquery/dist/jquery.js"></script>
     <script src="./node_modules/handlebars/dist/handlebars.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&callback=myMap"></script>
-    <script src="./assests/js/scripts.js"></script>
+    <script src="./assests/js/index.js"></script>
 </body>
 </html>
