--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <h1 class="title">Lule Moses</h1>
         <h2>Front-end Developer</h2>
         <p>Am passionate about programming i love teaching others if interested in making a team contact me</p>
+        <h2>THIS PAGE IS STILL BEING DEVELOPED CURRENTLY. THANK YOU</h2>
       </div>
     </article>
 
