--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <!--meta data-->
   <meta name="author" content="Lule moses" />
   <meta name="title" content="Lule Moses" />
-  <meta name="description" content="Web developer at Hultech,  it is a news website that provide with all the lastest technology and science news,research and innovations from the all world."/>
-  <meta name="keywords" content="lule moses, web developer kampala, front-end developer,front-end developer uganda" />
+  <meta name="description" content="Front-end developer"/>
+  <meta name="keywords" content="lulemoses,lule moses, lule, moses, Hultech, web developer kampala, front-end developer,front-end developer uganda" />
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,7 +21,6 @@
   <!--page title-->
   <title>Lule Moses</title>
   <!--CSS FILES -->
-  <link rel="icon" href="./assests/images/logo.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="./assests/css/styles.css">
@@ -116,14 +115,12 @@
                 <li>PHP</li>
                 <li>JAVACSRIPT</li>
                 <li>NODE JS</li>
-                <li>Ruby</li>
               </ol>
             </div>
             <div class="three">
               <h2>Database</h2>
               <ol>
                 <li>MYSQL</li>
-                <li>Mongo DB</li>
               </ol>
             </div>
             <div class="four">
@@ -137,7 +134,6 @@
               <ol class="d-flex">
                 <li>Git</li>
                 <li>Github</li>
-                <li>Visual Studio</li>
                 <li>Visual Studio</li>
               </ol>
             </div>
@@ -198,9 +194,7 @@
           <div class="col-lg-4">
             <div class="content">
               <h3 class="content-title">Why me ?</h3>
-              <p class="info">I am a self-taught programmer, i started by learning the foundations of programming with HTML, CSS and JavaScript. And after understanding the basics , i decided to take Web development as my first specialisation as a programmer and currently am a front-end developer. 
-                Currently, i create websites and host them on free web hosting platforms like github-pages and i share my work to my friends and on my social media to get visitors. Though my websites are not yet published but i always challenge myself to do the best. I have  created full website templates for  blogsites, real estates services and selling websites. I saved all my projects on github repository @lulemoses67. This has given me a real work experience mostly on how work is done and mostly remote.
-              </p>
+              <p class="info">I love working as a team.</p>
             </div>
           </div>
         </div>
