about section part 1

--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
   <!--page title-->
   <title>Lule Moses</title>
   <!--CSS FILES -->
+  <link rel="icon" type="image/png" href="./assests/images/CartoonAvatar1641242084019.png"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="./assests/css/styles.css">
 </head>
 <body>
   <!-- header-->
+  
   <header>
     <div class="container d-flex">
         <h1 class="logo">Lule Moses</h1>
@@ -51,11 +53,10 @@
   <main>
     <article class="hero">
       <div class="container">
-        <img src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.18169-9/13770514_755459117930111_8904157665738075981_n.jpg?_nc_cat=100&ccb=1-5&_nc_sid=174925&_nc_ohc=9f6InnN937gAX8YzPIA&_nc_ht=scontent-lga3-1.xx&oh=f0f5d18812976520652be08c253be7c4&oe=61DA6AE6" alt="">
+        <img src="./assests/images/CartoonAvatar1641242084019.png" alt="CartoonAvatar">
         <h1 class="title">Lule Moses</h1>
         <h2>Front-end Developer</h2>
-        <p>Am passionate about programming i love teaching others if interested in making a team contact me</p>
-        <h2>THIS PAGE IS STILL BEING DEVELOPED CURRENTLY. THANK YOU</h2>
+        <p>Hi , am Moses a front-end developer with one year experience , I develop and design webpages, websites and web applications using HTML, CSS with SASS, JAVASCRIPT and PHP with my SQL.</p>
       </div>
     </article>
 
@@ -64,28 +65,32 @@
       <div class="container">
         <h3 class="section-title">About me</h3>
         <div class="section-content">
-          <div class="about-card">
-            <div class="row">
-              <div class="col-md-12 col-lg-6">
-                <div class="col-md-12 col-lg-6">
-                  <img src="./assests/images/lk.jpg" alt="">
-                </div>
-                <div class="col-md-12 col-lg-6">
-                  <ul>
-                    <li><b>Name: </b><span>Lule Moses</span></li>
-                    <li><b>Profile: </b><span>Front-end developer</span></li>
-                    <li><b>Email: </b><span>lulemoses67@gmail.com</span></li>
-                    <li><b>Phone: </b><span>+256756150066</span></li>
-                  </ul>
-                </div>
-              </div>
-              <div class="col-md-12 col-lg-6">
-                <div class="deatails">
-                  <p>I am a self-taught programmer, i started by learning the foundations of programming with HTML, CSS and JavaScript. And after understanding the basics , i decided to take Web development as my first specialisation as a programmer and currently am a front-end developer. 
-                    Currently, i create websites and host them on free web hosting platforms like github-pages and i share my work to my friends and on my social media to get visitors. Though my websites are not yet published but i always challenge myself to do the best. I have  created full website templates for  blogsites, real estates services and selling websites. I saved all my projects on github repository @lulemoses67. This has given me a real work experience mostly on how work is done and mostly remote.
-                  </p>
-                </div>
-              </div>
+          <div class="about-preview">
+            <div class="body">
+              <img src="./assests/images/CartoonAvatar1641242084019.png" alt="">
+              <ul>
+                <li><b>Name</b></li>
+                <li>Lule Moses</li>
+                <li><b>Profile</b></li>
+                <li>Front-end developer</li>
+                <li><b>Email</b></li>
+                <li><a href="mailto:lulemoses67@gmail.com">lulemoses67@gmail.com</a></li>
+                <li><b>Phone</b></li>
+                <li><a href="tel:+256756150066">+256756150066</a></li>
+                <li><b>Github</b></li>
+                <li><a href="https://github.com/lulemoses67">lulemoses67</a></li>
+              </ul>
+            </div>
+            <div class="details">
+              <p>Hi , am Moses a front-end developer with one year experience , I develop and design webpages, websites and web applications using HTML, CSS with SASS, JAVASCRIPT and PHP with my SQL.
+                Am self-taught and I  started in 2019 by learning the foundation of programming with HTML, CSS and JavaScript from Duke University via Coursera .  Then I started creating and designing webpages like  a homepage, form pages  and some CSS cards. And when I understood the basics  I decided to take web development as my first tech specialization and learn more about it by taking more courses, readings and daily practice. And after sometime I enrolled for Responsive Web design from University of London via Coursera where I was introduced to more web development skills like bootstrap , jQuery and more JavaScript like handlebars.js . This also introduced me to front-end development and since then most of my work has been front-end.  And after that I decided to learn PHP and my SQL since a lot of websites are built using PHP. 
+                All that time I have been learning things and practicing them in my projects like personal website , personal blog and other projects saved on my GitHub repo.
+                Currently am still learning and getting more advanced knowledge about the programming languages I have learnt like now am enrolled to front-end development with Reacts from The University of Hong Kong and other internet resources as am working on some personal projects and looking for a break through.
+                After all that experience, I have developed some personal key skills in the subject like solving problems.
+                I intend to  become a full stack developer with time.
+                I love technology and I like talking about tech.
+                Thank you.                    
+              </p>
             </div>
           </div>
         </div>
